Input validation basics and error presentation

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -38,3 +38,22 @@ div {
 p {
   margin: 0;
 }
+form {
+  border: 1px solid black;
+}
+.error {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
+
+  opacity: 1;
+  background-color: red;
+
+  border: 1px solid red;
+
+  text-align: center;
+}
